dev/scss/_header.scss
@use 'variables' as *;
@use 'mixins' as *;

//header styles here
header{
    
    font-family: $font-navigation;
    font-weight: $font-weight-navigation;

    div:nth-child(1){
        span{
            color: $font-color-alt-heading;
            // only for icon size
            font-size: 2rem;
            padding: .5rem;
        }
        
        span:hover{
            // only for the icon hovers
            color: $color-alt-row;
        }

        img{
            max-width: 50%;
            padding: 1rem;
        }
    }

    nav{
        padding: 0 0 .97rem;
        background-color: $accent-color2;
        ul{
            list-style: none;
            background-color: $main-color;
            padding: 1rem 0;

            li a{
                padding: 1rem;
                color: $font-color-heading;
                text-decoration: none;
                text-transform: uppercase;
            }
        }

        @media(min-width: $tablet){
            ul{
                @include flex-row();
                justify-content: space-between;
                padding: inherit 2rem;
                max-width: 960px;
                margin: 0 auto;

                li a{
                    padding: 1.15rem;
                    &:hover{
                        // placeholder color
                        color: $font-color-heading-hover;
                        background-color: $accent-color;
                    }
                }
            }
        }
    }

    div>input{
        // used color only for search bar
        background-color: $color-alt-row;
        border-radius: 3px;
        padding: .45rem;
        border: none;
        margin: 1rem;
    }
}

